kube-lago/lago-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lago-api
  labels:
    app: lago-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lago-api
  template:
    metadata:
      labels:
        app: lago-api
    spec:
      containers:
      - name: lago-api
        image: getlago/api:v1.12.3
        command: ['./scripts/start.sh']
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - name: lago-storage
          mountPath: /app/storage
      volumes:
      - name: lago-storage
        persistentVolumeClaim:
          claimName: nfs-pvc-lago
