kube-lago/lago-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lago-front
  labels:
    app: lago-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lago-front
  template:
    metadata:
      labels:
        app: lago-front
    spec:
      containers:
      - name: lago-front
        image: getlago/front:v1.12.3
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
