kube-lago/lago-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lago-front-deployment
  labels:
    app: lago-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lago-front
  template:
    metadata:
      labels:
        app: lago-front
    spec:
      containers:
      - name: lago-front
        image: getlago/front:v1.12.3
        ports:
        - containerPort: 80
        command: ["/bin/sh", "-c", "while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g 'daemon off;'"]
