kube-lago/lago-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lago-api-service
spec:
  selector:
    app: lago-api
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
