kube-lago/lago-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lago-front-service
spec:
  selector:
    app: lago-front
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
